# 2026_inu_robocup_-communication

./: README.md  launch_test.sh  run_test.sh  text.txt
WB_pc/sml_system_pkg/: setup.py
WB_pc/sml_system_pkg/config/: station_coordinates_a_zone.json
WB_pc/sml_system_pkg/sml_system_pkg/: order_server.py  sml_manager_node.py  sml_planning_node.py
fixed-d/robocup_planner/: package.xml  setup.cfg  setup.py
fixed-d/robocup_planner/config/: params.yaml  robocup_waypoint.yaml
fixed-d/robocup_planner/robocup_planner/: planner_node.py  product_catalog.py
fixed-d/robocup_planner/robocup_planner/execution/: cargo_state.py  executor.py
fixed-d/robocup_planner/robocup_planner/planning/: aidlist_builder.py  cargo_allocator.py  distance_calculator.py  midlist_builder.py
fixed-d/robocup_planner/test/: sim_viz.html  simulate.py  test_aidlist_builder.py  test_cargo_allocator.py  test_cargo_state.py  test_midlist_builder.py  test_product_catalog.py  visualize.py
fixed-d/sml_system_pkg/config/: station_coordinates_a_zone.json
fixed-d/sml_system_pkg/sml_system_pkg/: __init__.py  mock_arm_node.py  mock_nav_node.py  mock_wb_node.py  order_server.py  sml_planning_node.py
oder_pc/sml_comm/: package.xml  setup.cfg  setup.py
oder_pc/sml_comm/sml_comm/: protocol.py  protocol.py.save
oder_pc/sml_interfaces/: CMakeLists.txt  package.xml
oder_pc/sml_interfaces/msg/: AmrCommand.msg  TaskPlan.msg  WbCommand.msg
oder_pc/sml_interfaces/srv/: ReportTaskResult.srv
oder_pc/sml_order_server/: package.xml  setup.cfg  setup.py
oder_pc/sml_order_server/sml_order_server/: order_server_node.py
oder_pc/sml_system/: package.xml  setup.cfg  setup.py
plan-f/: text.txt
plan-f/sml_system_pkg/: README.md  setup.py  tkinter_waypoint_map_renderer.py
plan-g/sml_system_pkg/: arena_side_utils.py  gui_map_source.py  mock_arm_node.py  mock_nav_node.py  mock_wb_node.py  order_server.py  sml_gui_node.py  sml_manager_node.py  sml_planning_node.py
planb-d/sml_system_pkg/: package.xml  setup.cfg  setup.py
planb-d/sml_system_pkg/sml_system_pkg/: mock_arm_node.py  mock_nav_node.py  mock_wb_node.py
planb-d/sml_system_pkg/sml_system_pkg/planning/: planner_config.py
planner/: sml_planning_node.py
save/sml_plan_d_msgs/: CMakeLists.txt  README.md  package.xml
save/sml_plan_d_system_pkg/: README.md  package.xml  setup.py
sml_msgs/msg/: Step.msg
sml_msgs/srv/: ArmCommand.srv
sml_system_pkg/: setup.py  sml_manager_node.py
sml_system_pkg/planning/: amr_inventory.py  planner_config.py  planner_core.py
sml_system_pkg/sml_system_pkg/: order_server.py  sml_manager_node.py  sml_planning_node.py  sml_planning_node_plan_a.py  sml_planning_node_plan_b.py
(+54 files in other folders)
