<?xml version="1.0"?>
<package format="3">
  <name>robocup_planner</name>
  <version>0.1.0</version>
  <description>RoboCup material pickup and assembly planner with hybrid static/reactive execution</description>
  <maintainer email="yeochoony@gmail.com">yeoch</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sml_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
