<?xml version="1.0"?>
<package format="3">
  <name>sml_system_pkg</name>
  <version>0.0.1</version>
  <description>SML Plan D planning and execution nodes.</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sml_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
